[controller] create process via ProcessBuilder and delete widget dir if something went wrong